src/objects/Brackets_UserMatchPred__c.object
<CustomObject>
    <fields>
        <fullName>Brackets_Match__c</fullName>
        <label>Match</label>
        <referenceTo>Brackets_Match__c</referenceTo>
        <relationshipLabel>UserMatchPredictions</relationshipLabel>
        <relationshipName>UserMatchPredictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brackets_UserTournament__c</fullName>
        <label>UserTournament</label>
        <referenceTo>Brackets_UserTournament__c</referenceTo>
        <relationshipLabel>UserMatchPredictions</relationshipLabel>
        <relationshipName>UserMatchPredictions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PredictedWinnerBrackets_Team__c</fullName>
        <label>PredictedWinnerTeam</label>
        <referenceTo>Brackets_Team__c</referenceTo>
        <relationshipLabel>UserMatchPredictions</relationshipLabel>
        <relationshipName>UserMatchPredictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserMatchPrediction</label>
    <nameField>
        <displayFormat>UMP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserMatchPredictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UserPredictionBeforeDeadlineRound</fullName>
        <active>true</active>
        <description>//deactivated as we need to update this object with points scored -- gives a false positive.</description>
        <errorConditionFormula>IF( 
and(
ISPICKVAL(Brackets_UserTournament__r.Brackets_Group__r.Type__c, &apos;Round&apos;),
ISCHANGED( PredictedWinnerBrackets_Team__c ) )
,Brackets_Match__r.Brackets_Round__r.Deadline__c &lt; NOW(), false)</errorConditionFormula>
        <errorMessage>Prediction for this match can be done after deadline of its round.</errorMessage>
    </validationRules>
</CustomObject>